--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     </div>
                     <div class="testimonial-item img-border-radius bg-light rounded p-4">
                         <div class="position-relative">
-                            <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
+                            <i class="fa fa-quote-right  text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
                                 <p class="mb-0"> Elevate your breakfast routine with the Fit for Kitchen toaster, a sleek and reliable appliance designed to make your mornings easier and more enjoyable.
                                 </p>
