--- a/about.html
+++ b/about.html
@@ -210,8 +210,9 @@
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Cooking Line</div>
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Salamander Grill</h4>
+                                
                                 <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p> -->
                                     <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aSalamander%20Grill" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
@@ -225,7 +226,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Rotary Oven</h4>
                                 <p>Fit for Kitchen Cooking Line. Designed to inspire creativity and elevate your cooking experience,the kitchen </p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p> -->
                                     <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRotary%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
@@ -239,7 +240,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Juice Dispensers</h4>
                                 <p>Introducing our Juice Dispensers: the ultimate solution for refreshing beverages. Designed for both functionality and style.  </p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p>/ -->
                                     <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aJuice%20Dispensers" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
@@ -253,7 +254,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Potatoes</h4>
                                 <p>High quality product</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <p class="text-dark fs-5 fw-bold">$07.99 / kg</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
@@ -267,7 +268,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Parsely</h4>
                                 <p>High quality product</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <p class="text-dark fs-5 fw-bold">$07.99 / kg</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
@@ -281,7 +282,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Potatoes</h4>
                                 <p>High quality product</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <p class="text-dark fs-5 fw-bold">$07.99 / kg</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
@@ -295,7 +296,7 @@
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Parsely</h4>
                                 <p>High quality product</p>
-                                <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
+                                <div class="d-flex justify-content-center pb-2 flex-lg-wrap" style="position: absolute; bottom: 0; width: 100%;">
                                     <p class="text-dark fs-5 fw-bold">$07.99 / kg</p>
                                     <a href="#" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
                                 </div>
